# shmtools

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  FIXED_TEST_FUNCTIONS.md  Guided_Waves.ipynb  MANIFEST.in  MATLAB_COMPATIBILITY_VERIFICATION.md  MATLAB_PYTHON_EXAMPLE_COMPARISON.md  PLOT_PSD_2D_USAGE.md  Phase2_Test_Notebook.ipynb  Phase3_Context_Menu_Test.ipynb  Phase4_Advanced_Features_Test.ipynb  README-publishing.md  README.md  Simple_Backend_Test.ipynb  Test_Extension_Backend.ipynb  UNPACKED_OUTPUTS_READY.md  Untitled.ipynb  Untitled1.ipynb  Untitled10.ipynb  Untitled11.ipynb  Untitled12.ipynb  Untitled13.ipynb  Untitled14.ipynb  Untitled15.ipynb  Untitled16.ipynb  Untitled17.ipynb  Untitled18.ipynb  Untitled19.ipynb  Untitled20.ipynb  Untitled21.ipynb  Untitled22.ipynb  Untitled23.ipynb  Untitled24.ipynb  Untitled25.ipynb  Untitled26.ipynb  Untitled27.ipynb  Untitled28.ipynb  Untitled29.ipynb  (+62 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  notebook_issue.md
.github/workflows/: test.yml
LADPackage/: __init__.py
LADPackage/active_sensing/: README.md  __init__.py  active_sensing_utils.py  full_active_sensing.html  full_active_sensing.ipynb  full_active_sensing.py
LADPackage/condition_based_monitoring/: condition_based_monitoring.html  condition_based_monitoring.ipynb
LADPackage/optimal_sensor_placement/: optimal_sensor_placement.html  optimal_sensor_placement.ipynb
LADPackage/outlier_detection/: outlier_detection.html  outlier_detection.ipynb
LADPackage/utils/: __init__.py  data_import.py  learn_score_mahalanobis.py  osp_plotting.py
bokeh_shmtools/: __init__.py  app.py
bokeh_shmtools/panels/: __init__.py  function_library.py  parameter_controls.py  results_viewer.py  variable_workspace.py  workflow_builder.py
bokeh_shmtools/sessions/: __init__.py  example_pca_session.py  session_formats.py  session_manager.py
bokeh_shmtools/utils/: __init__.py  data_loader.py  docstring_parser.py
bokeh_shmtools/workflows/: __init__.py  execution_engine.py
docs/: JUPYTERLAB_TESTING_GUIDE.md  PHASE10_CBM_STATUS.md  PHASE1_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  conversion-plan.md  conversion-validation-plan.md  docstring-format.md  instructions-conversion-plan.md  jupyter-plugin-plan.md  matlab-python-category-mapping.md  mfuse-conversion-plan.md  mfuse-to-jupyter-conversion-guide.md  missing_meta_fields.md  missing_verbose_call_functions.md  notebook-publishing.md
examples/: __init__.py
examples/data/: .gitignore  README.md  __init__.py  data_imports.py  data_loaders.py
examples/notebooks/: Phase3_Context_Menu_Test.ipynb  README.md  SIMPLE_IMPORTS.md  dataloader_demo.ipynb  update_imports.py
jupyter_shm_extension/: MANIFEST.in  __init__.py  handlers.py  setup.py  shm_function_selector.json
jupyter_shm_extension/static/: main.css  main.js
jupyterhub/: README.md  check_status.sh  debug_install.sh  fix_extension_for_users.sh  install_jupyterlab_extension.sh  manage_elastic_ip.sh  remote_update.sh  setup_jupyterhub_aws.sh  update_deployment.sh
published_notebooks/: README.md  index.html  master.html  start_server.py
published_notebooks/advanced/: active_sensing_feature_extraction.html  modal_analysis_features.html  modal_analysis_features_simplified.html  nonparametric_outlier_detection.html  semiparametric_outlier_detection.html
published_notebooks/basic/: ar_model_order_selection.html  default_detector_usage_backup.html  mahalanobis_outlier_detection.html  pca_outlier_detection.html  svd_outlier_detection.html  time_synchronous_averaging_demo.html
published_notebooks/other/: active_sensing_feature_extraction.html  ar_model_order_selection.html  ball_bearing_fault_analysis.html  chi_square_outlier_detection.html  custom_detector_assembly.html  damage_localization_ar_arx.html  daq_ar_mahalanobis_integration.html  data_normalization_modal_properties.html  dataloader_demo.html  dataset_management.html  direct_use_nonparametric.html  direct_use_semiparametric.html  factor_analysis_outlier_detection.html  (+11 more)
scripts/: convert_html_to_pdf.py
shm_function_selector/: .gitignore  .prettierignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  README_CONFIG.md  RELEASE.md  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled6.ipynb  __init__.py  config.json  config_examples.json  config_test.json  install.json  introspection.py  package-lock.json  package.json  pyproject.toml  setup_local_extension.sh
shm_function_selector/.github/workflows/: build.yml  check-release.yml
shm_function_selector/shm_function_selector/: __init__.py  handlers.py
shm_function_selector/src/: index.ts  serverAPI.ts
shm_function_selector/src/__tests__/: shm_function_selector.spec.ts
shm_function_selector/style/: index.css
shm_function_selector/ui-tests/: package.json
shm_function_selector/ui-tests/tests/: shm_function_selector.spec.ts
shmtools/: __init__.py  introspection.py  jupyter_extension_installer.py
validation/: VALIDATION_GUIDE.md  batch_validate.py  example_mapping.md  extract_notebook_info.py  notebook_summary.md  python_examples_list.md  validation_checklist.md
(+177 files in other folders)
